# OboeWithExoPlayer

samples/: settings.gradle
samples/cts-oboe/: build.gradle
samples/cts-oboe/src/androidTest/java/org/hyphonate/megaaudio/: ExampleInstrumentedTest.java
samples/cts-oboe/src/main/: AndroidManifest.xml
samples/cts-oboe/src/main/cpp/: CMakeLists.txt
samples/cts-oboe/src/main/cpp/player/: BlipAudioSource.cpp  BlipAudioSource.h  NoiseAudioSource.cpp  OboePlayer.cpp  SilenceAudioSource.cpp
samples/cts-oboe/src/main/java/org/hyphonate/megaaudio/: BlipAudioSource.java  BlipAudioSourceProvider.java  ExoPlayerActivity.java  MainActivity.java  OboeAudioProcessor.java  OboeAudioRenderersFactory.java  OboeAudioSource.java  OboeAudioSourceProvider.java  Utils.java  WanosAudioProcessor.java
samples/cts-oboe/src/main/java/org/hyphonate/megaaudio/player/: JavaPlayer.java  OboePlayer.java
samples/cts-oboe/src/main/java/org/hyphonate/megaaudio/player/sources/: WaveTableSource.java
samples/cts-oboe/src/main/java/org/hyphonate/megaaudio/recorder/: JavaRecorder.java
samples/cts-oboe/src/main/res/layout/: exoplayer_activity.xml
samples/cts-oboe/src/main/res/values/: strings.xml
samples/cts-oboe/src/main/res/xml/: network_sercurity_config.xml
samples/cts-oboe/src/test/java/org/hyphonate/megaaudio/: ExampleUnitTest.java
samples/gradle/wrapper/: gradle-wrapper.properties
samples/hello-oboe/: build.gradle
